--- a/assets/_scss/_main-site-default.scss
+++ b/assets/_scss/_main-site-default.scss
@@ -131,6 +131,7 @@ img {
     border-radius: 3px;
     margin: 1rem 0;
     max-width: 100%;
+    width: 100%;
     height: auto;
 }
 
